--- a/me.html
+++ b/me.html
@@ -134,7 +134,7 @@
                 <article id="spec" class="text-center">
                     <p>Aye look, that's me.</p>
 
-                    <p>I'm Stephen Sanders, and I'm currently a senior Philosophy major w/ Anthropology &amp; Computer Science minors at SUNY College at Brockport.</p>
+                    <p>I'm Stephen Sanders, and I'm currently a senior Philosophy major w/ a Computer Science minor at SUNY College at Brockport.</p>
 
                     <p>Here's what I've learned so far throughout the course of my academic career:</p>
                     <ul>
@@ -149,12 +149,10 @@
                         <ul id="sublist"><em><u>SUNY Fredonia</u></em>:
                           <li>C/C++</li>
                           <li>Linux</li>
-                          <li>Perl</li>
-                          <li>Shell scripting</li>
-                          <li>HTML5/CSS3</li>
-                          <li>JavaScript</li>
+                          <li>HTML5/CSS3/JavaScript</li>
                           <li>Bootstrap</li>
                           <li>LAMP w/ PHP</li>
+                          <li>Programming Languages</li>
                           <li>Ethics</li>
                           <li>Epistemology</li>
                           <li>Ancient Greek philosophy</li>
@@ -162,7 +160,6 @@
                         </ul>
                         <ul id="sublist"><em><u>SUNY College at Brockport</u></em>:
                           <li>MIPS Assembly</li>
-                          <li>C</li>
                           <li>Computer Organization</li>
                           <li>Computer Architecture</li>
                           <li>MySQL</li>
@@ -172,7 +169,6 @@
                           <li>Political Philosophy</li>
                           <li>Personal Identity</li>
                           <li>Analytic Philosophy</li>
-                          <li>Culture Change</li>
                         </ul>
                       </li>
                     </ul>
@@ -185,7 +181,7 @@
                     <article id="spec">
                         <p><strong class="un">Specialties</strong></p>
                         <ul>
-                            <li><strong>Development</strong>: I primarily develop for the web. I mainly use JavaScript (Node.js, AngularJS, React [Native], jQuery), HTML5/CSS3 (Sass, Bootstrap), Python (Django, Flask), WordPress, Linux, and Git.</li><br />
+                            <li><strong>Development</strong>: I primarily develop for the web. I mainly use JavaScript (Node.js, AngularJS, React [Native], jQuery), HTML5/CSS3 (Sass, Bootstrap), Python (Django), WordPress, Linux, and Git.</li><br />
                             <li><strong>Philosophy</strong>: My writings concern topics such as epistemology (<a href="https://en.wikipedia.org/wiki/Foundationalism#Modest_foundationalism" target="_blank">modest foundationalism</a>) and social philosophy.</li><br />
                             <li><strong>Writing</strong>: I am especially interested in writing about culture, politics &amp; economics, society, and various philosophical topics (as applied to reality/current events).</li>
                         </ul>
