changed kaktus app link

--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                 <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
                 <li><a href="./chat.html">Chat</a></li>
                 <li class="divider"></li>
-                <li><a href="http://kaktusapp.com" target="_blank">Kaktus</a></li>
+                <li><a href="http://kaktusapp.org" target="_blank">Kaktus</a></li>
                 <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
 				        <li><a href="/shooly/" target="_blank">Shooly</a></li>
                 <li><a href="/writer/" target="_blank">Writer</a></li>
@@ -112,7 +112,7 @@
                   </ul>
                 </li><br />
                 <li>
-                    <a id="name" href="http://kaktusapp.com" target="_blank">Kaktus</a>: Text-to-document converter web application that I developed for a web programming class that I took in the Spring of 2016. Currently only supports .txt files, but there is continuous development on my part and additional features (e.g., Google Drive &amp; Dropbox support, a lot better support for Word documents and PDFs) should be implemented within the coming months.<br /><br />
+                    <a id="name" href="http://kaktusapp.org" target="_blank">Kaktus</a>: Text-to-document converter web application that I developed for a web programming class that I took in the Spring of 2016. Currently only supports .txt files, but there is continuous development on my part and additional features (e.g., Google Drive &amp; Dropbox support, a lot better support for Word documents and PDFs) should be implemented within the coming months.<br /><br />
                     <p id="techused">Technologies Used:</p>
                     <ul>
                         <li>HTML5/CSS3</li>
