--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           Hello, I'm Stephen Sanders. The "C" stands for Clyde. I have to put it there since I'm named after my dad.
         </p>
         <p>
-          Anyways, I'm 20 years old, a student, developer, writer, and amateur philosopher.
+          Anyways, I'm 21 years old, a student, web developer, writer, and amateur philosopher.
         </p>
         <p>
           Wanna see more?
