--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
             <p class="text-center" style="font-size: 20px; padding-top: 7.5px;"><strong>Here are some of the things I've worked on, both open and closed source</strong>:</p>
             <ul style="padding-right: 25px;">
                 <li>
-                    <a id="name" href="https://github.com/complxalgorithm/complxalgorithm.github.io" target="_blank">This website</a>: I already have a personal website that's built with WordPress. I made this website for the sake of being able to customize everything (and really to say that I managed to develop my own website).<br /><br />
+                    <a id="name" href="https://github.com/complxalgorithm/complxalgorithm.github.io" target="_blank">This website</a>: I had a personal website that was built with WordPress. I made this website for the sake of being able to customize everything (and really to say that I managed to develop my own website).<br /><br />
                     <p id="techused">Technologies Used:</p>
                     <ul>
                         <li>HTML5/CSS3</li>
@@ -95,6 +95,14 @@
                         <li>Bootstrap</li>
                         <li>Git</li>
                         <li><a href="https://pages.github.com" target="_blank">GitHub Pages</a></li>
+                    </ul>
+                </li><br />
+                <li>
+                    <a id="name" href="http://buffalofirefighters.com" target="_blank">Buffalo Fire Fighters website</a>: A website I built for the Buffalo Fire Fighters Local 282, which represents the over 700 men and women who make up the Buffalo Fire Department. The BFD serves over a quarter of a million people.<br /><br />
+                    <p id="techused">Technologies Used:</p>
+                    <ul>
+                        <li>WordPress</li>
+                        <li>HTML5/CSS3</li>
                     </ul>
                 </li><br />
                 <li>
