--- a/projects.html
+++ b/projects.html
@@ -106,6 +106,23 @@
                     </ul>
                 </li><br />
                 <li>
+                    <a id="name" href="https://www.brockport.edu" target="_blank">SUNY College at Brockport website</a>: I helped with certain pages in a few of the science departments and I also worked for a short while on the campus map.<br /><br />
+                    <p id="techused">Technologies Used:</p>
+                    <ul>
+                        <li>HTML5/CSS3</li>
+                        <li>CMS development</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </li><br />
+                <li>
+                    <a id="name" href="http://omicroninteractive.com" target="_blank">Omicron Interactive website</a>: Company website on which I assisted which is used as the homebase for the Omicron Interactive brand.<br /><br />
+                    <p id="techused">Technologies Used:</p>
+                    <ul>
+                        <li>Grav (formerly WordPress)</li>
+                        <li>Microsoft Azure</li>
+                    </ul>
+                </li><br />
+                <li>
                   <a id="name" href="https://git.omicroninteractive.com/0x97/powerdns-admin" target="_blank">0x97 Admin</a>: Open source DNS administration portal. A fork of <a href="https://github.com/ngoduykhanh/PowerDNS-Admin" target="_blank">PowerDNS Admin</a>.<br /><br />
                   <p id="techused">Technologies Used:</p>
                   <ul>
