--- a/projects.html
+++ b/projects.html
@@ -118,7 +118,7 @@
                     <a id="name" href="http://omicroninteractive.com" target="_blank">Omicron Interactive website</a>: Company website on which I assisted which is used as the homebase for the Omicron Interactive brand.<br /><br />
                     <p id="techused">Technologies Used:</p>
                     <ul>
-                        <li>Grav (formerly WordPress)</li>
+                        <li><a href="https://getgrav.org/" target="_blank">Grav</a> (formerly WordPress)</li>
                         <li>Microsoft Azure</li>
                     </ul>
                 </li><br />
