--- a/projects.html
+++ b/projects.html
@@ -123,7 +123,7 @@
                     </ul>
                 </li><br />
                 <li>
-                  <a id="name" href="https://git.omicroninteractive.com/0x97/powerdns-admin" target="_blank">0x97 Admin</a>: Open source DNS administration portal. A fork of <a href="https://github.com/ngoduykhanh/PowerDNS-Admin" target="_blank">PowerDNS Admin</a>.<br /><br />
+                  <a id="name" href="https://dns.0x97.io/" target="_blank">0x97 Admin</a>: DNS administration portal. A fork of <a href="https://github.com/ngoduykhanh/PowerDNS-Admin" target="_blank">PowerDNS Admin</a>.<br /><br />
                   <p id="techused">Technologies Used:</p>
                   <ul>
                     <li>HTML/CSS3</li>
