--- a/me.html
+++ b/me.html
@@ -91,7 +91,7 @@
                 <article id="spec" class="text-center">
                     <p>Aye look, that's me.</p>
 
-                    <p>I'm Stephen Sanders, and I'm currently a senior Philosophy major w/ a Computer Science minor at SUNY College at Brockport.</p>
+                    <p>I'm Stephen Sanders, and I'm currently a senior Philosophy major w/ Computer Science &amp; Anthropology minors at SUNY College at Brockport.</p>
 
                     <p>Here's what I've learned so far throughout the course of my academic career:</p>
                     <ul>
