added creative.html to showcase my creativity; additional minor edits

--- a/me.html
+++ b/me.html
@@ -42,6 +42,7 @@
             <li><a href="#">Me</a></li>
             <li><a href="./projects.html">Work</a></li>
             <li><a href="./philosophy.html">Contemplations</a></li>
+            <li><a href="./creative.html">Creative</a></li>
             <li><a href="./academic/">Academic</a></li>
 			      <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
             <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
@@ -52,9 +53,6 @@
 			      <li><a href="/shooly/" target="_blank">Shooly</a></li>
             <li><a href="/writer/" target="_blank">Writer</a></li>
             <li><a href="/calculator/" target="_blank">calculator</a></li>
-            <li><a href="/mp3er/" target="_blank">Mp3er</a></li>
-            <li><a href="/ropas/" target="_blank">Ropas</a></li>
-            <li><a href="/matching-game/" target="_blank">Matching Game</a></li>
             <li class="divider"></li>
             <li><a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a></li>
             <li><a href="http://0x97.io" target="_blank">0x97</a></li>
