--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,7 @@
                 <li><a href="./me.html">Me</a></li>
                 <li><a href="#">Work</a></li>
                 <li><a href="./philosophy.html">Contemplations</a></li>
+                <li><a href="./creative.html">Creative</a></li>
                 <li><a href="./academic/">Academic</a></li>
 				        <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
                 <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
@@ -58,9 +59,6 @@
 				        <li><a href="/shooly/" target="_blank">Shooly</a></li>
                 <li><a href="/writer/" target="_blank">Writer</a></li>
                 <li><a href="/calculator/" target="_blank">calculator</a></li>
-                <li><a href="/mp3er/" target="_blank">Mp3er</a></li>
-                <li><a href="/ropas/" target="_blank">Ropas</a></li>
-                <li><a href="/matching-game/" target="_blank">Matching Game</a></li>
                 <li class="divider"></li>
                 <li><a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a></li>
                 <li><a href="http://0x97.io" target="_blank">0x97</a></li>
@@ -82,7 +80,7 @@
         </ul>
 
         <div id="projs">
-            <p class="text-center" style="font-size: 20px; padding-top: 7.5px;"><strong>Here are some of the things I've worked on, both open and closed source</strong>:</p>
+            <p class="text-center" style="font-size: 20px; padding-top: 7.5px;"><strong>Here are some of the projects I've worked on, both open and closed source</strong>:</p>
             <ul style="padding-right: 25px;">
                 <li>
                     <a id="name" href="https://github.com/complxalgorithm/complxalgorithm.github.io" target="_blank">This website</a>: I had a personal website that was built with WordPress. I made this website for the sake of being able to customize everything (and really to say that I managed to develop my own website).<br /><br />
