--- a/creative.html
+++ b/creative.html
@@ -66,7 +66,7 @@
         </header>
         
         <div id="creative-works">
-            <p class="text-center" style="font-size: 20px; padding-top: 7.5px;"><strong>Here is a listing of some of my creative endeavors</strong>:</p>
+            <p class="text-center" style="font-size: 20px; padding-top: 7.5px;"><strong>Here is a listing of some of my creative endeavors, including poems, stories, etc.</strong>:</p>
             <!-- accordion code -->
             <div id="accordion" role="tablist">
                 <div class="card">
