minor updates and edits

--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,8 @@
                     </ul>
                 </li><br />
                 <li>
-                    <a id="name" href="http://buffalofirefighters.com" target="_blank">Buffalo Fire Fighters website</a>: A website I built for the Buffalo Fire Fighters Local 282, which represents the over 700 men and women who make up the Buffalo Fire Department. The BFD serves over a quarter of a million people.<br /><br />
+                    <a id="name" href="http://buffalofirefighters.com" target="_blank">Buffalo Fire Fighters website</a>: A website I built for the Buffalo Fire Fighters Local 282, which represents the over 700 men and women who make up the Buffalo Fire Department. The BFD serves over a quarter of a million people.<br />
+                    <small style="padding-left:5px"><i><u>Note</u></i>: I have not worked on the website since late September 2017.</small><br />
                     <p id="techused">Technologies Used:</p>
                     <ul>
                         <li>WordPress</li>
