--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
         <p>Member of the <a href="http://www.societyofepictetus.org/" target="_blank">Society of Epictetus</a>.</p>
       </div>
     </center>
+    
+    <center>
+        <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#f4cb42', 'M4M87ZJY');kofiwidget2.draw();</script>
+    </center>
 
     <script type="text/javascript" src="src/js/dropdown.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
