--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         <a href="https://refind.com/ComplxAlgorithm?invite=MTQXDUUpLz" target="_blank" class="btn btn-social-icon btn-lg btn-refind">
           <p>
-            <img src="https://d2qsqwbsghr38c.cloudfront.net/img/logo_128.svg?de1a7b7ab9e6bcb1cac2484bf28748d1c42092052e588033e336ae89f58b2de5" alt="R" height="26px" width="26px" />
+            <img src="https://refind.com/img/logo/logo.svg" alt="R" height="26px" width="26px" />
           </p>
         </a>
 
