--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <center>
       <div id="affil">
           <p><em class="un">Affiliations</em>: Retail Sales Representative at <a href="https://www.sunnking.com/" target="_blank">Sunnking, Inc</a>.</p>
-        <p>Senior Philosophy major w/ Anthropology &amp; Computer Science minors at <a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a>.</p>
+        <p><a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a> Class of 2018.</p>
       </div>
     </center>
     
