--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <center>
       <div id="affil">
-          <p><em class="un">Affiliations</em>: Retail Sales Representative at <a href="https://www.sunnking.com/" target="_blank">Sunnking, Inc</a>.</p>
+          <p><em class="un">Affiliations</em>: Junior Web Developer at <a href="https://jemediacorp.com/" target="_blank">J&amp;E Media Corp</a>.</p>
         <p><a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a> Class of 2018.</p>
       </div>
     </center>
