--- a/me.html
+++ b/me.html
@@ -89,46 +89,38 @@
                 <article id="spec" class="text-center">
                     <p>Aye look, that's me.</p>
 
-                    <p>I'm Stephen Sanders, and I'm a graduate of SUNY College at Brockport, where I majored in Philosophy and minored in Anthropology and Computer Science.</p>
+                    <p>I'm Stephen Sanders, and I'm a graduate of SUNY College at Brockport, where I majored in Philosophy and minored in Anthropology and Computer Science. I am currently a Junior Web Developer for <a href="https://jemediacorp.com/" target="_blank">J&amp;E Media Corp</a>.</p>
 
-                    <p>Here's what I've learned so far throughout the course of my academic career:</p>
+                    <p>Here's some of the things that I learned over the duration of my academic career:</p>
                     <ul>
                       <li id="melist"><small><u>High School</u></small>
                         <ul>Calculus</ul>
                         <ul>Spanish</ul>
                         <ul>Critical Thinking</ul>
-                        <ul>Technical Drawing (CAD)</ul>
                         <ul>Microsoft Office 2010</ul>
                       </li>
                       <li id="melist"><small><u>College</u></small>
                         <ul id="sublist"><em><u>SUNY Fredonia</u></em>:
-                          <li>C/C++</li>
                           <li>Linux</li>
                           <li>HTML5/CSS3/JavaScript</li>
                           <li>Bootstrap</li>
                           <li>LAMP w/ PHP</li>
-                          <li>Programming Languages</li>
-                          <li>Ethics</li>
-                          <li>Epistemology</li>
+                          <li>Ethics &amp; Epistemology</li>
                           <li>Ancient Greek philosophy</li>
-                          <li>Analytic Philosophy</li>
-                        </ul>
+                        </ul><br />
                         <ul id="sublist"><em><u>SUNY College at Brockport</u></em>:
-                          <li>MIPS Assembly</li>
-                          <li>Computer Organization</li>
-                          <li>Computer Architecture</li>
+                          <li>Computer Organization &amp; Architecture</li>
                           <li>MySQL</li>
                           <li>Logic</li>
                           <li>Philosophy of Evolution</li>
-                          <li>Modern Philosophy</li>
                           <li>Political Philosophy</li>
                           <li>Personal Identity</li>
-                          <li>Analytic Philosophy</li>
+                          <li>Seminar on <a href="https://en.wikipedia.org/wiki/John_Locke" target="_blank">John Locke</a></li>
                         </ul>
                       </li>
                     </ul>
 
-                    <p>The main activities in which I partake outside of schoolwork are web development and writing.</p>
+                    <p>The main activities in which I partake outside of schoolwork are web development, <a href="https://www.wikitree.com/wiki/Sanders-11855" target="_blank">genealogical research</a>, and writing.</p>
 
                     <p>I am also an amateur philosopher. I've written <a href="./philosophy.html">some neat stuff</a>.</p>
 
@@ -138,7 +130,8 @@
                             <ul>
                                 <li><strong>Development</strong>: I primarily develop for the web. I mainly use JavaScript (Node.js, AngularJS, React [Native], jQuery), HTML5/CSS3 (Sass, Bootstrap), Python (Django), WordPress, Linux, and Git.</li><br />
                                 <li><strong>Philosophy</strong>: My writings concern topics such as epistemology (<a href="https://en.wikipedia.org/wiki/Foundationalism#Modest_foundationalism" target="_blank">modest foundationalism</a>) and social philosophy.</li><br />
-                                <li><strong>Writing</strong>: I am especially interested in writing about culture, politics &amp; economics, society, and various philosophical topics (as applied to reality/current events).</li>
+                                <li><strong>Writing</strong>: I am especially interested in writing about culture, politics &amp; economics, society, and various philosophical topics (as applied to reality/current events).</li><br />
+                                <li><strong>Genealogy</strong>: I have been researching my family tree for months, including family originating from Slovenia, Germany, France through Quebec, and Britain.</li>
                             </ul>
                         </article>
                     </div>
