much needed mobile edits on me.html and a couple minor mobile edits on index.html

--- a/me.html
+++ b/me.html
@@ -87,7 +87,7 @@
 
             <div class="mediv">
                 <article id="spec" class="text-center">
-                    <p>Aye look, that's me.</p>
+                    <p>Yep, this is me.</p>
 
                     <p>I'm Stephen Sanders, and I'm a graduate of SUNY College at Brockport, where I majored in Philosophy and minored in Anthropology and Computer Science. I am currently a Junior Web Developer for <a href="https://jemediacorp.com/" target="_blank">J&amp;E Media Corp</a>.</p>
 
@@ -102,8 +102,7 @@
                       <li id="melist"><small><u>College</u></small>
                         <ul id="sublist"><em><u>SUNY Fredonia</u></em>:
                           <li>Linux</li>
-                          <li>HTML5/CSS3/JavaScript</li>
-                          <li>Bootstrap</li>
+                          <li>HTML5/CSS3/Bootstrap/JavaScript</li>
                           <li>LAMP w/ PHP</li>
                           <li>Ethics &amp; Epistemology</li>
                           <li>Ancient Greek philosophy</li>
