changed kaktus link in main nav

--- a/chat.html
+++ b/chat.html
@@ -47,7 +47,7 @@
                 <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
                 <li><a href="#">Chat</a></li>
                 <li class="divider"></li>
-                <li><a href="http://kaktusapp.org" target="_blank">Kaktus</a></li>
+                <li><a href="/kaktus_app/" target="_blank">Kaktus</a></li>
                 <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
 				        <li><a href="/shooly/" target="_blank">Shooly</a></li>
                 <li><a href="/writer/" target="_blank">Writer</a></li>
