--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
         <li><a href="./chat.html">Chat</a></li>
         <li class="divider"></li>
-        <li><a href="http://kaktusapp.org" target="_blank">Kaktus</a></li>
+        <li><a href="/kaktus_app/" target="_blank">Kaktus</a></li>
         <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
 		    <li><a href="/shooly/" target="_blank">Shooly</a></li>
         <li><a href="/writer/" target="_blank">Writer</a></li>
