project page edits: smaller screen css additions and additional minor tweaks and additions

--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
                 <li>
                     <a id="name" href="https://github.com/complxalgorithm/complxalgorithm.github.io" target="_blank">This website</a>: I had a personal website that was built with WordPress. I made this website for the sake of being able to customize everything (and really to say that I managed to develop my own website).<br /><br />
                     <p id="techused">Technologies Used:</p>
-                    <ul>
+                    <ul class="techused-list">
                         <li>HTML5/CSS3</li>
                         <li>JavaScript</li>
                         <li>jQuery</li>
@@ -115,7 +115,7 @@
                 <li>
                   <a id="name" href="https://dns.0x97.io/" target="_blank">0x97 Admin</a>: DNS administration portal. A fork of <a href="https://github.com/ngoduykhanh/PowerDNS-Admin" target="_blank">PowerDNS Admin</a>.<br /><br />
                   <p id="techused">Technologies Used:</p>
-                  <ul>
+                  <ul class="techused-list">
                     <li>HTML/CSS3</li>
                     <li>JavaScript (jQuery)</li>
                     <li>Python (Flask)</li>
@@ -129,7 +129,7 @@
                 <li>
                     <a id="name" href="http://kaktusapp.org" target="_blank">Kaktus</a>: Text-to-document converter web application that I developed for a web programming class that I took in the Spring of 2016. Currently only supports .txt files, but there is continuous development on my part and additional features (e.g., Google Drive &amp; Dropbox support, a lot better support for Word documents and PDFs) should be implemented within the coming months.<br /><br />
                     <p id="techused">Technologies Used:</p>
-                    <ul>
+                    <ul class="techused-list">
                         <li>HTML5/CSS3</li>
                         <li>JavaScript</li>
                         <li>Bootstrap</li>
@@ -142,7 +142,7 @@
                 <li>
                     <a id="name" href="/bookmarx-chrome-extension/">Bookmarx</a>: Chrome extension that shows every bookmark saved using the extension whenever the user opens a new tab.<br /><br />
                     <p id="techused">Technologies Used:</p>
-                    <ul>
+                    <ul class="techused-list">
                         <li>HTML5/CSS3</li>
                         <li>JavaScript</li>
                         <li><a href="http://www.typescriptlang.org/" target="_blank">TypeScript</a></li>
@@ -154,7 +154,7 @@
                 <li>
                     <a id="name" href="./shooly/" target="_blank">shooly</a>: Simple command line tools that I developed solely because I wanted to get some practice with the command line and shell scripting.<br /><br />
                     <p id="techused">Technologies Used:</p>
-                    <ul>
+                    <ul class="techused-list">
                         <li>C</li>
                         <li>csh/bash</li>
                         <li><a href="https://en.wikipedia.org/wiki/AWK" target="_blank">Awk</a></li>
@@ -182,7 +182,7 @@
                 <li>
                   <a id="name" href="./mp3er/" target="_blank">mp3er</a>: Basic web-based mp3 player I developed in my Web Programming I class. It showcases some of the basic functionality of the <a href="https://greensock.com/gsap" target="_blank">GSAP</a> JavaScript library.<br /><br />
                   <p>Technologies Used:</p>
-                  <ul>
+                  <ul class="techused-list">
                     <li>HTML5/CSS3</li>
                     <li>JavaScript</li>
                     <li>Bootstrap</li>
@@ -193,7 +193,7 @@
                 <li>
                     <a id="name" href="./matching-game/" target="_blank">Matching Game</a>: Dead simple matching game I developed in a web programming class I took. View it <a href="https://github.com/complxalgorithm/matching_game" target="_blank">on GitHub</a>.<br /><br />
                     <p id="techused">Technologies Used:</p>
-                    <ul>
+                    <ul class="techused-list">
                         <li>HTML5/CSS3</li>
                         <li>JavaScript</li>
                         <li>Bootstrap</li>
@@ -203,7 +203,7 @@
                 <li>
                     Parkplots: A mobile application with the intention of easing the process of locating a parking space within a crowded city or at a populous event.<br /><br />
                     <p id="techused">Technologies Used:</p>
-                    <ul>
+                    <ul class="techused-list">
                         <li>HTML5/Sass</li>
                         <li>JavaScript</li>
                         <li>Python</li>
@@ -214,6 +214,7 @@
                     </ul>
                 </li><br />
                 <p>More to come...😁</p>
+                <p><span style="font-weight:bold;">P.S.</span>: You can also see other websites I have developed under my J&amp;E Media Corp experience on <a href="https://www.linkedin.com/in/stephencsanders/" target="_blank">my LinkedIn profile</a>. Thank you for your interest in my work!</p>
             </ul>
         </div>
 
