multiple edits, including secondary navbar styling, adding another poem to creative page, removing academic subsite, and a few minor tweaks

--- a/philosophy.html
+++ b/philosophy.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
 
-    <title>SCS's Philosophy Page</title>
+    <title>My Philosophical Contemplations - Stephen C. Sanders</title>
 
     <meta name="author" content="Stephen C. Sanders">
-    <meta name="description" content="Full Stack Web Developer and college senior based outside of Rochester, NY">
+    <meta name="description" content="My philosophical writings cover topics ranging from the necessity of empathy in understanding the world to the application of the social contract theory to the problem of animal rights.">
     <meta name=viewport content="width=device-width, initial-scale=1"/>
 
     <link rel="icon" type="image/jpg" href="./assets/icons/FullSizeRender.jpg" />
@@ -42,14 +42,12 @@
             <li><a href="./projects.html">Work</a></li>
             <li><a href="#">Contemplations</a></li>
             <li><a href="./creative.html">Creative</a></li>
-            <li><a href="./academic/">Academic</a></li>
-			      <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
+            <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
             <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
-            <li><a href="./chat.html">Chat</a></li>
             <li class="divider"></li>
             <li><a href="/kaktus_app/" target="_blank">Kaktus</a></li>
             <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-			      <li><a href="/shooly/" target="_blank">Shooly</a></li>
+            <li><a href="/shooly/" target="_blank">Shooly</a></li>
             <li><a href="/writer/" target="_blank">Writer</a></li>
             <li><a href="/calculator/" target="_blank">calculator</a></li>
             <li class="divider"></li>
@@ -69,7 +67,7 @@
         <li><a href="./me.html">Me</a></li>
         <li><a href="./projects.html">Projects</a></li>
         <li role="presentation" class="active"><a href="#">Philosophy</a></li>
-        <li><a href="./academic/">Academic</a></li>
+        <li><a href="./creative.html">Creative</a></li>
     </ul>
 
     <nav class="nav navbar">
@@ -97,7 +95,7 @@
 
     <center>
       <div id="philobutton">
-        <button type="submit" name="philobutton" class="btn btn-default btn-lg philsub"><a href="https://philosowiseblog.wordpress.com" target="_blank">See More</a></button>
+        <a href="https://philosowiseblog.wordpress.com" target="_blank"><button type="submit" name="philobutton" class="btn btn-default btn-lg philsub">See More</button></a>
       </div>
     </center>
 
