--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
 
-        <title>SCS's Projects</title>
+        <title>My Projects - Stephen C. Sanders</title>
 
         <meta name="author" content="Stephen C. Sanders">
-        <meta name="description" content="Full Stack Web Developer and college senior based outside of Rochester, NY">
+        <meta name="description" content="Stephen C. Sanders has worked on a multitude of projects ranging from WordPress websites to Chrome extensions and other web applications.">
         <meta name=viewport content="width=device-width, initial-scale=1"/>
 
         <link rel="icon" type="image/jpg" href="./assets/icons/FullSizeRender.jpg" />
@@ -49,14 +49,12 @@
                 <li><a href="#">Work</a></li>
                 <li><a href="./philosophy.html">Contemplations</a></li>
                 <li><a href="./creative.html">Creative</a></li>
-                <li><a href="./academic/">Academic</a></li>
-				        <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
+                <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
                 <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
-                <li><a href="./chat.html">Chat</a></li>
                 <li class="divider"></li>
                 <li><a href="/kaktus_app/" target="_blank">Kaktus</a></li>
                 <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-				        <li><a href="/shooly/" target="_blank">Shooly</a></li>
+                <li><a href="/shooly/" target="_blank">Shooly</a></li>
                 <li><a href="/writer/" target="_blank">Writer</a></li>
                 <li><a href="/calculator/" target="_blank">calculator</a></li>
                 <li class="divider"></li>
@@ -76,7 +74,7 @@
             <li><a href="./me.html">Me</a></li>
             <li role="presentation" class="active"><a href="#">Projects</a></li>
             <li><a href="./philosophy.html">Philosophy</a></li>
-            <li><a href="./academic/">Academic</a></li>
+            <li><a href="./creative.html">Creative</a></li>
         </ul>
 
         <div id="projs">
