--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Stephen C. Sanders</title>
+    <title>Stephen C. Sanders - Web Developer in Brockport, NY</title>
 
     <meta name="author" content="Stephen C. Sanders">
-    <meta name="description" content="Full Stack Web Developer and college senior based outside of Rochester, NY">
+    <meta name="description" content="Stephen C. Sanders is a Web Developer and SUNY Brockport philosophy graduate based outside of Rochester, New York who specializes in WordPress, HTML/CSS, and website administration.">
     <meta name=viewport content="width=device-width, initial-scale=1"/>
     <meta name="wot-verification" content="9639ea9d3abce81a6da4"/>
 
@@ -43,14 +43,12 @@
         <li><a href="./projects.html">Work</a></li>
         <li><a href="./philosophy.html">Contemplations</a></li>
         <li><a href="./creative.html">Creative</a></li>
-        <li><a href="./academic/">Academic</a></li>
-		    <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
+        <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
         <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
-        <li><a href="./chat.html">Chat</a></li>
         <li class="divider"></li>
         <li><a href="/kaktus_app/" target="_blank">Kaktus</a></li>
         <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-		    <li><a href="/shooly/" target="_blank">Shooly</a></li>
+        <li><a href="/shooly/" target="_blank">Shooly</a></li>
         <li><a href="/writer/" target="_blank">Writer</a></li>
         <li><a href="/calculator/" target="_blank">calculator</a></li>
         <li class="divider"></li>
@@ -114,10 +112,6 @@
 
         <a href="https://www.upwork.com/o/profiles/users/_~01633b8da61664339a/" target="_blank" class="btn btn-social-icon btn-lg btn-upwork">
           <p id="upicon">Up</p>
-        </a>
-
-        <a href="https://www.reddit.com/u/complxalgorithm" target="_blank" class="btn btn-social-icon btn-lg btn-reddit">
-          <i class="fa fa-reddit"></i>
         </a>
 
         <a href="https://www.pinterest.com/complxalgorithm" target="_blank" class="btn btn-social-icon btn-lg btn-pinterest">
