--- a/me.html
+++ b/me.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
 
-        <title>SCS Facts</title>
+        <title>Facts About Me - Stephen C. Sanders</title>
 
         <meta name="author" content="Stephen C. Sanders">
-        <meta name="description" content="Full Stack Web Developer and college senior based outside of Rochester, NY">
+        <meta name="description" content="Stephen C. Sanders is a Web Developer and SUNY Brockport philosophy graduate based outside of Rochester, New York who specializes in WordPress, HTML/CSS, and website administration, and is also interested in anthropology, culture/language, and genealogy.">
         <meta name=viewport content="width=device-width, initial-scale=1"/>
 
         <link rel="icon" type="image/jpg" href="./assets/icons/FullSizeRender.jpg" />
@@ -43,14 +43,11 @@
             <li><a href="./projects.html">Work</a></li>
             <li><a href="./philosophy.html">Contemplations</a></li>
             <li><a href="./creative.html">Creative</a></li>
-            <li><a href="./academic/">Academic</a></li>
-			      <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
+            <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
             <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
-            <li><a href="./chat.html">Chat</a></li>
             <li class="divider"></li>
             <li><a href="/kaktus_app/" target="_blank">Kaktus</a></li>
-            <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-			      <li><a href="/shooly/" target="_blank">Shooly</a></li>
+            <li><a href="/shooly/" target="_blank">Shooly</a></li>
             <li><a href="/writer/" target="_blank">Writer</a></li>
             <li><a href="/calculator/" target="_blank">calculator</a></li>
             <li class="divider"></li>
@@ -70,7 +67,7 @@
             <li role="presentation" class="active"><a href="#">Me</a></li>
             <li><a href="./projects.html">Projects</a></li>
             <li><a href="./philosophy.html">Philosophy</a></li>
-            <li><a href="./academic/">Academic</a></li>
+            <li><a href="./creative.html">Creative</a></li>
         </ul>
 
         <div class="github">
