--- a/creative.html
+++ b/creative.html
@@ -64,7 +64,7 @@
         </header>
         
         <ul class="nav nav-tabs" id="creative-tabs">
-            <li><a href="#">Me</a></li>
+            <li><a href="./me.html">Me</a></li>
             <li><a href="./projects.html">Projects</a></li>
             <li><a href="./philosophy.html">Philosophy</a></li>
             <li role="presentation" class="active"><a href="./creative.html">Creative</a></li>
