--- a/philosophy.html
+++ b/philosophy.html
@@ -70,7 +70,7 @@
         <li><a href="./creative.html">Creative</a></li>
     </ul>
 
-    <nav class="nav navbar">
+    <nav class="nav navbar philo-nav">
         <li><a class="navbar-brand" href="http://philpapers.org/profile/207902" target="_blank">PhilPapers</a></li>
         <li><a class="navbar-brand" href="https://brockport.academia.edu/StephenSanders" target="_blank">Academia.edu</a></li>
         <li><a class="navbar-brand" href="http://www.iep.utm.edu/" target="_blank">IEP</a></li>
