stack overflow icon img now points to secure link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <a href="http://stackoverflow.com/story/stephenclydesanders" target="_blank" class="btn btn-social-icon btn-lg btn-stackoverflow">
           <p>
-            <img src="http://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt="SO" height="28px" width="28px" />
+            <img src="https://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt="SO" height="28px" width="28px" />
           </p>
         </a>
 
