removed irrelevant links from main menu, removed personal email in contact modal from plain text, and a couple other minor edits

--- a/creative.html
+++ b/creative.html
@@ -6,7 +6,7 @@
         <title>My Creativity - Stephen C. Sanders</title>
 
         <meta name="author" content="Stephen C. Sanders">
-        <meta name="description" content="Full Stack Web Developer and college senior based outside of Rochester, NY">
+        <meta name="description" content="Aside from writings considered philosophical in nature, I also enjoy writing poems and lyrics.">
         <meta name=viewport content="width=device-width, initial-scale=1"/>
 
         <link rel="icon" type="image/jpg" href="./assets/icons/FullSizeRender.jpg" />
@@ -50,9 +50,6 @@
 				<li><a href="/shooly/" target="_blank">Shooly</a></li>
                 <li><a href="/writer/" target="_blank">Writer</a></li>
                 <li><a href="/calculator/" target="_blank">calculator</a></li>
-                <li class="divider"></li>
-                <li><a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a></li>
-                <li><a href="http://0x97.io" target="_blank">0x97</a></li>
                 <li class="divider"></li>
                 <li><a href="https://www.paypal.me/stephensanders6496" target="_blank">Donate via PayPal</a></li>
                 <li><a href="https://cash.me/$stephencsanders" target="_blank">Donate via Square Cash</a></li>
