--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
         <li><a href="/writer/" target="_blank">Writer</a></li>
         <li><a href="/calculator/" target="_blank">calculator</a></li>
         <li class="divider"></li>
-        <li><a href="http://omicroninteractive.com" target="_blank">Omicron Interactive</a></li>
-        <li><a href="http://0x97.io" target="_blank">0x97</a></li>
-        <li class="divider"></li>
         <li><a href="https://www.paypal.me/stephensanders6496" target="_blank">Donate via PayPal</a></li>
         <li><a href="https://cash.me/$stephencsanders" target="_blank">Donate via Square Cash</a></li>
       </ul>
@@ -150,11 +147,9 @@
           </div>
           <div class="modal-body">
             <center>
+              <p id="email-p"></p>
               <p>
-                for programming related inquiries: <a href="mailto:scsandman6496@gmail.com">scsandman6496@gmail.com</a>.
-              </p>
-              <p>
-                for philosophy related inquiries: <a href="mailto:philosowise@gmail.com">philosowise@gmail.com</a>.
+                  for family tree-related inquiries: send me a <a href="https://www.wikitree.com/index.php?title=Special:PrivateMessage&who=20065121" target="_blank">private message on WikiTree</a> or email me at the address above.
               </p>
               <p class="text-center">
                 looking forward to hearing from you! :)
@@ -167,6 +162,8 @@
         </div>
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="src/contact-modal.js" type="text/javascript"></script>
 
     <center>
       <div id="affil">
